--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin - Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <label for="location">Location: </label>
+      <input type="text" class="location" name="location">
+      <input type="button" value="Submit" class="submit">
+    </form>
+    <div class="weather-today"></div>
+  </body>
 </html>
