Updated script files to use modules

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <form>
-      <label for="location">Location: </label>
+      <label for="location">Search Location: </label>
       <input type="text" class="location" name="location">
       <input type="button" value="Submit" class="submit">
     </form>
-    <div class="weather-today"></div>
+    <div class="weather-today">
+    </div>
   </body>
 </html>
