--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <title>Odin - Weather App</title>
   </head>
   <body>
-    <form>
-      <label for="location">Search Location: </label>
-      <input type="text" class="location" name="location" value="sydney" />
-      <input type="button" value="Submit" class="submit" />
-    </form>
+    <div class="location-form">
+      <form>
+        <label for="location">Weather Location: </label>
+        <input type="text" class="location" name="location" value="sydney" />
+        <input type="button" value="Submit" class="submit" />
+      </form>
+    </div>
     <div class="weather-today"></div>
     <div class="weather-future"></div>
   </body>
